# geo-lab

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  skills-lock.json
.agents/skills/docs-vault/: DESIGN-MD-TEMPLATE.md  SKILL.md  VAULT-STRUCTURE.md
.claude/skills/: components-hierarchy  docs-vault  pedantic-react
.github/workflows/: ci.yml  pages.yml
cli/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
cli/src/: args.ts  cli.ts  db.ts  format.ts  index.ts  types.ts
cli/src/__tests__/: cli.test.ts  commands.test.ts  eval.test.ts  export-geojson.test.ts  golden.test.ts  lexer.test.ts  parser.test.ts
cli/src/__tests__/fixtures/: fixtureDb.ts
cli/src/commands/: alerts.ts  export-geojson.ts  export.ts  query.ts  stats.ts
cli/src/parser/: ast.ts  errors.ts  eval.ts  lexer.ts  parser.ts
data/geo/: agebs_cdmx.geojson  marginacion_cdmx.csv
docs/: ARCHITECTURE.md  AUTH.md  DATA.md  DESIGN.md  ENGINEERING.md  Home.md  PRODUCT.md  README.md  RUNTIME.md  TESTING.md  data-notes.md  dev-notes.md  development.md  filter-language.md
docs/.obsidian/: app.json  bookmarks.json  graph.json
docs/architecture/: contracts.md  fastgeo.md  overview.md  pipeline.md  query-engine.md  web-app.md
docs/conventions/: cpp-native.md  git-and-pr.md  python-style.md  styling-system.md  typescript-style.md
docs/decisions/: 0001-hand-written-filter-parser.md  0002-cpp-fastgeo-via-pybind11.md  0003-fp-contract-off-for-parity.md  0004-commit-built-artifacts.md  0005-dup-of-is-a-label.md  index.md
docs/quality/: accessibility.md  data-integrity.md  performance.md  security.md
docs/upgrades/: backlog.md  immediate.md
docs/workflows/: add-a-filter-field.md  add-a-region.md  build-fastgeo.md  diagnose-parity-failure.md  regenerate-data.md
pipeline/: clean.py  dedupe.py  enrich.py  export_web.py  geo_backend.py  ingest.py  pyproject.toml  stats.json  stats.py
pipeline/native/: CMakeLists.txt  __init__.py  bindings.cpp  pyproject.toml
pipeline/native/fallback/: __init__.py  fastgeo_py.py
pipeline/native/fastgeo/: geo.cpp  geo.hpp  simhash.cpp  simhash.hpp
pipeline/tests/: conftest.py  test_clean.py  test_dedupe.py  test_enrich.py  test_export_web.py  test_gen_listings.py  test_ingest.py  test_parity.py  test_stats.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: listings.json
web/src/: charts.ts  data.ts  main.ts  map.ts  style.css
web/src/__tests__/: charts.test.ts  data.test.ts
