[project]
name = "geo-lab-pipeline"
version = "0.1.0"
description = "geo-lab data pipeline: raw listing CSVs -> data/db.sqlite -> stats/enrichment/web export"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
